fix image spacing for projects

--- a/styles.css
+++ b/styles.css
@@ -184,7 +184,7 @@ img {
     width: 80%;
     margin-left: auto;
     margin-right: auto;
-    padding: 3rem;
+    padding: 7%;
 }
 
 .pic {
